# Filmcraft

./: README.md
EditorUI/EditorUI/: EditorUI.qmlproject  EditorUI.qmlproject.qtds
EditorUI/EditorUI/EditorUI/: Constants.qml  qmldir
EditorUI/EditorUI/EditorUI/designer/: plugin.metainfo
EditorUI/EditorUI/EditorUIContent/: Main.qml  Screen01.ui.qml
Mission Vardaan Studio Project/MissionVardaanStudio/: CMakeLists.txt
VardaanUI/: CMakeLists.txt  VardaanUI.qmlproject  VardaanUI.qmlproject.qtds  VardaanUI.qmlproject.qtds.7b137f1  VardaanUI.qmlproject.qtds.a66d710  VardaanUI.qmlproject.qtds.b9d4139  VardaanUI.qmlproject.qtds.c9312f4  VardaanUI.qmlproject.qtds.fec8d1f  qds.cmake
VardaanUI/App/autogen/: environment.h
VardaanUI/VardaanUI/: CMakeLists.txt  Constants.qml  qmldir
VardaanUI/VardaanUI/designer/: plugin.metainfo
VardaanUI/VardaanUIContent/: App.qml  AudioAdjust.qml  CMakeLists.txt  Chromakey.qml  Colorpletrs.qml  Crop.qml  Customspeed.qml  Export_Media.qml  Export_Media_Settings.qml  Export_Settings.qml  Screen01.ui.qml
VardaanUI/VardaanUIContent/images/: Thumbs.db
Vardaancode/: CMakeLists.txt  CMakeUserPresets.json  M1import.cpp  M1import.h  VardaanUI.qrc  main.cpp  qml.qrc  resources.qrc
Vardaancode/ui/: App.qml  AudioAdjust.qml  CMakeLists.txt  Export_Media.qml  Screen01.ui.qml
